# sygaldry

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  build-system.lili  build-system.lili.md  build-system.litlit  litlit.sh  shell.nix  shell.nix.lili.md  todo.md
bindings/: CMakeLists.lili.md  CMakeLists.txt  README.md  basic_reader.lili.md  bindings_demo.lili.md  cli.lili.md  demo.cpp  liblo.hpp  liblo.lili  liblo.lili.md  name_dispatch.hpp  name_dispatch.lili  name_dispatch.lili.md  name_dispatch.litlit  osc_match_pattern.hpp  osc_match_pattern.lili.md  osc_string_constants.hpp  osc_string_constants.lili.md  output_logger.hpp  output_logger.lili  output_logger.lili.md  output_logger.litlit  rapid_json.lili.md  rapidjson.hpp  rapidjson.lili.md  runtime.lili  session_data.hpp  session_data.lili.md  spelling.hpp  spelling.lili  spelling.lili.md  spelling.litlit  testcomponent.lili.md
bindings/basic_logger/: CMakeLists.txt  README.md  basic_logger.hpp  basic_logger.lili  basic_logger.lili.md  basic_logger.litlit  cstdio_logger.hpp  standard_logger.hpp  test_logger.hpp  test_putter.hpp  tests.cpp
bindings/basic_reader/: CMakeLists.txt  README.md  basic_reader.lili  basic_reader.lili.md  basic_reader.litlit  cstdio_reader.hpp  test_reader.hpp  tests.cpp
bindings/bindings/: cli.hpp  cstdio_logger.hpp  liblo.hpp  osc_string_constants.hpp  output_logger.hpp  rapidjson.hpp  testcomponent.hpp
bindings/cli/: CMakeLists.txt  README.md  cli.hpp  cli.lili  cli.lili.md  cli.litlit  cli_app.hpp  cli_app_demo.cpp  matcher.hpp  tests.cpp
bindings/esp32/: README.md  libmapper-arduino.lili.md  rapidjson.lili.md  spiffs.hpp  spiffs.lili.md  wifi.hpp  wifi.lili  wifi.lili.md
bindings/tests/: CMakeLists.txt  bindings_demo.lili.md  demo.cpp
components/: CMakeLists.lili.md  CMakeLists.txt  README.md  arduino-hack.lili.md  button.lili.md  components.litlit  concepts.hpp  concepts.litlit  debug_printer.hpp  debug_printer.lili.md  endpoints.hpp  endpoints.litlit  icm20948.hpp  icm20948.lili.md  metadata.hpp  metadata.litlit  testcomponent.hpp  trill.lili.md  trill_craft.hpp
components/arduino-hack/: Arduino.h  CMakeLists.txt  SPI.h  Wire.cpp  Wire.h
components/components/: button.hpp  trill_craft.hpp
components/endpoints/: README.md  concepts.hpp  endpoints.litlit  helpers.hpp  inspectors.hpp  tests.cpp
components/esp32/: CMakeLists.txt  README.md  adc.hpp  adc.lili.md  arduino-hack.lili.md  button.hpp  button.lili  button.lili.md  button.litlit  gpio.hpp  gpio.lili  gpio.lili.md  gpio.litlit  i2c.hpp  i2c.lili.md  icm20948.lili.md  tests.litlit  trill.lili.md
components/ports/: CMakeLists.txt  concepts.hpp  helpers.hpp  inspectors.hpp  ports.hpp  ports.litlit  string_literal.hpp  tests.cpp
components/sensors/: CMakeLists.txt  README.md  button.hpp  button.lili.md  button.litlit  gpio.lili.md
components/src/: button.cpp  trill_craft.cpp
components/tests/: README.md  testcomponent.hpp  testcomponent.lili  testcomponent.lili.md  testcomponent.litlit
components/trill_craft/: CMakeLists.txt  sygaldry-components-trill_craft.hpp  sygaldry-components-trill_craft.impl.hpp  trill.lili.md
concepts/: CMakeLists.lili.md  CMakeLists.txt  README.md  components.hpp  components.lili  components.lili.md  components.litlit  endpoints.hpp  endpoints.lili  endpoints.lili.md  endpoints.litlit  functions.hpp  functions.lili  functions.lili.md  functions.litlit  metadata.hpp  metadata.lili  metadata.lili.md  metadata.litlit  mimu.hpp  mimu.lili.md  runtime.hpp  runtime.lili  runtime.lili.md
concepts/components/: CMakeLists.txt  components.lili.md  sygaldry-concepts-components.test.cpp
concepts/concepts/: endpoints.hpp  mimu.hpp  runtime.hpp
concepts/endpoints/: CMakeLists.txt  endpoints.lili.md  sygaldry-concepts-endpoints.hpp  sygaldry-concepts-endpoints.test.cpp
concepts/functions/: CMakeLists.txt  functions.lili.md  sygaldry-concepts-functions.cpp  sygaldry-concepts-functions.hpp
concepts/metadata/: CMakeLists.txt  metadata.lili.md  sygaldry-concepts-metadata.hpp  sygaldry-concepts-metadata.test.cpp
concepts/mimu/: CMakeLists.txt  mimu.lili.md  sygaldry-concepts-mimu.test.cpp
concepts/runtime/: CMakeLists.txt  runtime.lili.md  sygaldry-concepts-runtime.hpp  sygaldry-concepts-runtime.test.cpp
helpers/: CMakeLists.lili.md  CMakeLists.txt  README.md  endpoints.hpp  endpoints.lili  endpoints.lili.md  endpoints.litlit  metadata.hpp  metadata.lili  metadata.lili.md  metadata.litlit  mimu.hpp  mimu.lili.md
helpers/endpoints/: CMakeLists.txt  endpoints.lili.md  sygaldry-helpers-endpoints.hpp
helpers/helpers/: endpoints.hpp  metadata.hpp  mimu.hpp
helpers/metadata/: CMakeLists.txt  metadata.lili.md
helpers/mimu/: CMakeLists.txt  mimu.lili.md  sygaldry-helpers-mimu.hpp
instruments/one-bit-bongo/: CMakeLists.txt  README.md  esp-install.sh  one-bit-bongo.lilit  one-bit-bongo.litlit
sh/: idf.sh  (+20 more)
sygaldry/: CMakeLists.txt
sygaldry-instruments/continulodica_pico/: CMakeLists.txt  array-iter.pd  calibration.pd  continulodica.cpp  continulodica_pico.lili.md  prototype.pd  test.pd
sygaldry-instruments/t_stick_pico/: CMakeLists.txt  t_stick_pico.lili.md  test.cpp  tstick.cpp
sygaldry/bindings/: basic_logger.lili.md  liblo.lili.md  osc_match_pattern.lili.md  osc_string_constants.lili.md  session_data.lili.md  spelling.lili.md
sygaldry/docs/: authors.md  citations.bib  contributing.md  convenience_scripts.md  design_concepts.md  developer_setup.md  doxygen.md  implementation.md  lili.md  making_a_new_component.md  making_a_new_instrument.md  sygbp-basic_reader.md  sygsp-byte_serif.md  template.md  writing_a_new_component.md
sygaldry/sensors/: README.md
sygaldry/sygac-components/: CMakeLists.txt  sygac-components.hpp  sygac-components.lili.md  sygac-components.test.cpp
sygaldry/sygac-endpoints/: CMakeLists.txt  sygac-endpoints.hpp  sygac-endpoints.lili.md  sygac-endpoints.test.cpp
sygaldry/sygac-functions/: CMakeLists.txt  sygac-functions.hpp  sygac-functions.lili.md  sygac-functions.test.cpp
sygaldry/sygac-metadata/: CMakeLists.txt  (+3 more)
(+650 files in other folders)
