add_library(sygaldry-helpers INTERFACE)
target_link_libraries(sygaldry-helpers INTERFACE sygaldry-utilities)
target_include_directories(sygaldry-helpers INTERFACE "${CMAKE_CURRENT_LIST_DIR}")
add_library(Sygaldry::Helpers ALIAS sygaldry-helpers)

if (SYGALDRY_BUILD_TESTS)
add_subdirectory("tests/metadata")
add_subdirectory("tests/endpoints")
add_subdirectory("tests/mimu")
endif()
