function(syg_add_package_group group)
    add_library(${group} INTERFACE)
    target_link_libraries(sygaldry INTERFACE ${group})
endfunction()

function(syg_add_component component parent)
    add_subdirectory(${component})
    if(TARGET ${component})
        target_link_libraries(${parent} INTERFACE ${component})
    endif()
endfunction()

add_library(sygaldry INTERFACE)

syg_add_package_group(sygac)
syg_add_component(sygac-runtime sygac)
syg_add_component(sygac-tuple sygac)
syg_add_component(sygac-components sygac)
syg_add_component(sygac-endpoints sygac)
syg_add_component(sygac-mimu sygac)
syg_add_component(sygac-functions sygac)
syg_add_component(sygac-metadata sygac)
syg_add_package_group(sygah)
syg_add_component(sygah-mimu sygah)
syg_add_component(sygah-string_literal sygah)
syg_add_component(sygah-consteval sygah)
syg_add_component(sygah-endpoints sygah)
syg_add_component(sygah-metadata sygah)
syg_add_package_group(sygup)
syg_add_component(sygup-basic_logger sygup)
syg_add_component(sygup-debug_printer sygup)
syg_add_component(sygup-test_logger sygup)
syg_add_component(sygup-cstdio_logger sygup)
syg_add_package_group(sygsp)
syg_add_component(sygsp-arduino_hack sygsp)
syg_add_component(sygsp-mimu_units sygsp)
syg_add_component(sygsp-delay sygsp)
syg_add_component(sygsp-button sygsp)
syg_add_component(sygsp-micros sygsp)
syg_add_component(sygsp-icm20948 sygsp)
syg_add_component(sygsp-complementary_mimu_fusion sygsp)
syg_add_package_group(sygbp)
syg_add_component(sygbp-cstdio_reader sygbp)
syg_add_component(sygbp-test_component sygbp)
syg_add_component(sygbp-output_logger sygbp)
syg_add_component(sygbp-session_data sygbp)
syg_add_component(sygbp-osc_string_constants sygbp)
syg_add_component(sygbp-liblo sygbp)
syg_add_component(sygbp-rapid_json sygbp)
syg_add_component(sygbp-test_reader sygbp)
syg_add_component(sygbp-spelling sygbp)
syg_add_component(sygbp-cli sygbp)
syg_add_component(sygbp-osc_match_pattern sygbp)

if (ESP_PLATFORM)
syg_add_package_group(syghe)
syg_add_component(syghe-pins syghe)
syg_add_package_group(sygsa)
syg_add_component(sygsa-trill_craft sygsa)
syg_add_component(sygsa-two_wire_serif sygsa)
syg_add_component(sygsa-max17055 sygsa)
syg_add_component(sygsa-delay sygsa)
syg_add_component(sygsa-two_wire sygsa)
syg_add_package_group(sygse)
syg_add_component(sygse-button sygse)
syg_add_component(sygse-max17055 sygse)
syg_add_component(sygse-adc sygse)
syg_add_component(sygse-delay sygse)
syg_add_component(sygse-arduino_hack sygse)
syg_add_component(sygse-gpio sygse)
syg_add_component(sygse-micros sygse)
syg_add_package_group(sygbe)
syg_add_component(sygbe-runtime sygbe)
syg_add_component(sygbe-spiffs sygbe)
syg_add_component(sygbe-libmapper_arduino sygbe)
syg_add_component(sygbe-wifi sygbe)
endif()

if (PICO_SDK)
syg_add_package_group(sygbr)
syg_add_component(sygbr-runtime sygbr)
syg_add_component(sygbr-cli sygbr)
syg_add_package_group(sygsa)
syg_add_component(sygsa-trill_craft sygsa)
syg_add_component(sygsa-two_wire_serif sygsa)
syg_add_component(sygsa-max17055 sygsa)
syg_add_component(sygsa-delay sygsa)
syg_add_component(sygsa-two_wire sygsa)
syg_add_package_group(sygsr)
syg_add_component(sygsr-adc sygsr)
syg_add_component(sygsr-button sygsr)
syg_add_component(sygsr-arduino_hack sygsr)
endif()
