set(lib sygaldry-concepts-components)
add_library(${lib} INTERFACE)
target_include_directories(${lib} INTERFACE .)
target_link_libraries(${lib} INTERFACE Boost::pfr)
target_link_libraries(${lib} INTERFACE Boost::mp11)
target_link_libraries(${lib} INTERFACE sygaldry-concepts-metadata)
target_link_libraries(${lib} INTERFACE sygaldry-concepts-functions)
target_link_libraries(${lib} INTERFACE sygaldry-concepts-endpoints)
target_link_libraries(sygaldry-concepts INTERFACE ${lib})

if (SYGALDRY_BUILD_TESTS)
add_executable(${lib}-test ${lib}.test.cpp)
target_link_libraries(${lib}-test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(${lib}-test PRIVATE ${lib})
target_link_libraries(${lib}-test PRIVATE sygaldry-helpers)
catch_discover_tests(${lib}-test)
endif()
