set(lib sygaldry-concepts-endpoints)
add_library(${lib} INTERFACE)
target_include_directories(${lib} INTERFACE .)
target_link_libraries(${lib} INTERFACE sygaldry-utilities-consteval)
target_link_libraries(sygaldry-concepts INTERFACE ${lib})

add_executable(${lib}-test ${lib}.test.cpp)
target_link_libraries(${lib}-test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(${lib}-test PRIVATE ${lib})
target_link_libraries(${lib}-test PRIVATE sygaldry-helpers)
catch_discover_tests(${lib}-test)
