set(lib sygaldry-concepts-functions)
add_library(${lib} INTERFACE)
target_include_directories(${lib} INTERFACE .)
target_link_libraries(sygaldry-concepts INTERFACE ${lib})

add_executable(${lib}-test ${lib}.test.cpp)
target_link_libraries(${lib}-test PRIVATE Catch2::Catch2WithMain)
target_link_libraries(${lib}-test PRIVATE ${lib})
target_link_libraries(${lib}-test PRIVATE Sygaldry::Helpers)
catch_discover_tests(${lib}-test)
